reimplementacion del put para permitir actualizar informacion generica
